syntax="proto3";

package timeseries.api.v1;

/*import "google/api/annotations.proto";*/
/*import "protoc-gen-swagger/options/annotations.proto";*/

/*import "google/protobuf/field_mask.proto";*/
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

option go_package = "grpc";


message event {
  string event_type = 1; // can be Enum to save bandwith
  int64 ts = 2; // Can be goole.protobuf.Timestamp, but we don't need nanoseconds in this case
  google.protobuf.Struct params = 3;
}

service EventService {
  rpc StoreEvent(event) returns (google.protobuf.Empty) {}
  rpc StreamEvents(stream event) returns (google.protobuf.Empty) {}
}

